--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>page-vision-studio</title>
-    <meta name="description" content="Lovable Generated Project" />
-    <meta name="author" content="Lovable" />
+    <title>Aurtho</title>
+    <meta name="description" content="Aurtho Waiting List" />
+    <meta name="author" content="Aurtho" />
     <meta property="og:image" content="/og-image.png" />
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap">
   </head>
+
 
   <body>
     <div id="root"></div>
